[gd_scene load_steps=13 format=2]

[ext_resource path="res://SquareShape.tres" type="Shape2D" id=1]
[ext_resource path="res://assets/colored_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://entities/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/Minimal3x5.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://entities/Player/Cursor.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/focus.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/talk.wav" type="AudioStream" id=7]
[ext_resource path="res://entities/Player/Dialog.gd" type="Script" id=8]
[ext_resource path="res://assets/player.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 4
outline_size = 2
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 576, 192, 16, 16 )

[sub_resource type="DynamicFont" id=4]
size = 3
outline_size = 1
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = ExtResource( 4 )

[node name="Player" type="Area2D"]
z_index = 1
monitoring = false
monitorable = false
collision_layer = 512
collision_mask = 512
script = ExtResource( 3 )

[node name="Dialog" type="Node2D" parent="."]
visible = false
z_index = 12
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Dialog"]
margin_left = 4.0
margin_top = -11.0
margin_right = 44.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
text = "I need some wood!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXPlayerTalk" type="AudioStreamPlayer" parent="Dialog"]
stream = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Dialog"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource( 1 )

[node name="Sprite2D" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="TweenMovement" type="Tween" parent="."]

[node name="Cursor" type="Node2D" parent="."]
visible = false
scale = Vector2( 1.25, 1.25 )
z_index = 10
script = ExtResource( 5 )

[node name="CursorSprite" type="Sprite" parent="Cursor"]
modulate = Color( 1, 0.560784, 0.211765, 1 )
texture = SubResource( 3 )

[node name="Label" type="Label" parent="Cursor"]
anchor_right = 8.0
margin_left = -8.0
margin_top = -10.0
margin_right = 8.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = SubResource( 4 )
text = "Carry"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXPlayerSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
[connection signal="timeout" from="Dialog/Timer" to="Dialog" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="TweenMovement" to="." method="_on_TweenMovement_tween_completed"]
